# dzetsaka

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  FEEDBACK_OPTIONS.md  FINAL_SUMMARY.md  Filter map.model  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_QPROCESS.md  Makefile  NEW_CLASSIFIERS.md  PARAMETER_MIGRATION_GUIDE.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_KICKOFF.md  PHASE2_SUMMARY.md  PHASE3_KICKOFF.md  PHASE3_SUMMARY.md  PHASE4_5_KICKOFF.md  PLAN.md  QPROCESS_IMPLEMENTATION.md  README.md  RECIPE_RECOMMENDATION_SUMMARY.md  REFACTORING_PROGRESS.md  TODO_AUDIT.md  TRANSITION_GUIDE.md  TrainAndClassify.model  UI_INTEGRATION_COMPLETE.md  UI_UPDATE_GUIDE.md  WELCOME_WIZARD_SUMMARY.md  __init__.py  annotated.html  classdze_1_1dzetsaka_1_1dzetsaka-members.html  classdze_1_1dzetsaka_1_1dzetsaka.html  classdze_1_1scripts_1_1accuracy__index_1_1_c_o_n_f_u_s_i_o_n___m_a_t_r_i_x-members.html  classdze_1_1scripts_1_1accuracy__index_1_1_c_o_n_f_u_s_i_o_n___m_a_t_r_i_x.html  classdze_1_1scripts_1_1filters_1_1filters_function-members.html  classdze_1_1scripts_1_1filters_1_1filters_function.html  (+94 more)
.claude/: settings.local.json
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: code_style.md  completion_tasks.md  project_overview.md  suggested_commands.md  tech_stack.md
convert_processing/: moduleName.py  moduleName_algorithm.py  moduleName_provider.py  processingProvider.py
convert_processing/algorithms/: DTW.py  classify.py  closingFilter.py  historicalFilter.py  historicalPostClassification.py  medianFilter.py  sieveArea.py  splitTrainValidation.py  train.py
core/: __init__.py  file_manager.py  plugin.py  settings_manager.py  ui_controller.py
data/sample/: map.tif.aux.xml  train.geoparquet.parquet  train.geoparquet.qmd
docs/: ALGORITHMS.md  ARCHITECTURE_REFACTOR_2026.md  FUTURE_ENHANCEMENTS.md  GMM_PHASE3_FEATURES.md  GMM_RIDGE_ENHANCEMENT_SUMMARY.md  INSTALLATION_UI_FIX.md  USER_GUIDE.md  USER_GUIDE_NEW_FEATURES.md  conf.py  enhanced_progress_reporting.md  enhanced_progress_widget_visual.txt  index.rst  installation.rst  recipe_recommendations.md  recommendation_ui_guide.md  results_explorer.md  runtime_split.md  validated_widgets_integration_checklist.md  validated_widgets_summary.md  validated_widgets_usage.md  visual_recipe_shop_guide.md  visual_recipe_shop_summary.md  welcome_wizard_integration.md  welcome_wizard_quickstart.md
domain/: __init__.py  exceptions.py
dzetsaka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: validated_widgets_integration.py  validated_widgets_minimal.py
factories/: __init__.py  classifier_factory.py
help/source/: conf.py  index.rst
img/: dzetsaka_settings.xcf
img/modern/: README.md
ml/: __init__.py  classifier.py  learner.py  utils.py
processing/: __init__.py  classify.py  closingFilter.py  closing_filter.py  domainAdaptation.py  domain_adaptation.py  explain_model.py  learnWithSpatialSampling.py  learnWithStandCV.py  learn_with_spatial_sampling.py  learn_with_stand_cv.py  medianFilter.py  median_filter.py  metadata_helpers.py  moduleName_algorithm.py  nested_cv_algorithm.py  resampleImageSameDate.py  resample_image_same_date.py  shannonEntropy.py  shannon_entropy.py  sieveArea.py  sieve_area.py  splitTrainValidation.py  split_train_validation.py  train.py
sample/: demo_dzetsaka.qgs  train.dbf  train.qml  train.shp  train.shx
scripts/: __init__.py  accuracy_index.py  classification_pipeline.py  compute_stability.py  coords.npy  domainAdaptation.py  domain_adaptation.py  dtw.py  filters.py  function_dataraster.py  function_vector.py  gmm_ridge.py  mainfunction.py  mainfunction2.py  progressBar.py  progress_bar.py  resampleSameDateAsSource.py  resample_same_date_as_source.py  sampler.py  sanstitre0.py  sklearn_validator.py  writePerBlock.py
scripts/explainability/: __init__.py  shap_explainer.py
scripts/optimization/: README.md  __init__.py  optuna_optimizer.py
scripts/sampling/: __init__.py  class_weights.py  smote_sampler.py
scripts/validation/: __init__.py  metrics.py  nested_cv.py
scripts/wrappers/: __init__.py  label_encoders.py
search/: all_10.js  all_11.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_c.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
services/: __init__.py  runtime_loader.py  use_case_bridge.py
src/dzetsaka/: __init__.py  logging.py
tests/integration/: test_imbalance_workflow.py  test_sample_data_workflow.py  test_shap_workflow.py
tests/unit/: test_accuracy_index.py  test_architecture_guardrails.py  test_async_install_dispatch.py  test_class_weights.py  test_classification_pipeline.py  test_classification_pipeline_shap_config.py  test_cli.py  (+28 more)
tools/: build_plugin.py
ui/: README_VALIDATED_WIDGETS.md  VALIDATED_WIDGETS_QUICKREF.md  __init__.py  advanced_compact_panel.py  anniversary.py  anniversary_widget.py  batch_classification_dialog.py  builtin_recipes.json  classification_workflow_ui.py  comparison_panel.py  confidence_analysis_widget.py  confusion_dock.py  confusion_dock.ui  dashboard_widget.py  dzetsaka_dock.py  dzetsaka_dock.py.bak  dzetsaka_dock.ui  filters_dock.py  filters_dock.ui  filters_dock.ui.bak  guided_workflow_widget.py  help_dock.py  help_dock.ui  historicalfilter_dock.py  historicalfilter_dock.ui  install_progress_dialog.py  recipe_icons.py  recipe_recommender.py  recipe_shop_visual.py  recipe_shop_visual_demo.py  recipe_shop_visual_example_integration.py  recipe_shop_visual_integration.md  recipe_shop_visual_styles.qss  recommendation_dialog.py  results_explorer_dock.py  settings_dock.py  settings_dock.py.backup  settings_dock.ui  theme_support.py  training_data_quality_checker.py  (+5 more)
(+80 files in other folders)
